Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23415

Crash when trying to debug over ssh without gdbserver

    XMLWordPrintable

Details

    • macOS
    • 9165119819fe6a595c2a82b327ae67e597ffceba (qt-creator/qt-creator/4.11)

    Description

      1. Configure debugger behavior in Qt Creator to "Switch to previous mode on debugger exit".
      2. Create a ssh connection to a linux (armv7) device. The remote linux doesn't have gdb server installed
      2. Create a c++ command line application
      3. Try to debug over ssh the application

      Expected:
      Qt Creator should not crash.

      Actual:
      Qt Creator crashes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            mariuss Marius S
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes